# docs/swagger.json
@@ -190,6 +190,11 @@
         },
         "/products": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get All Product",
                 "consumes": [
                     "application/json"
